# slicer-nasal-septum-analysis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SegmentEditorLocalThreshold
.github/workflows/: main.yml
notebooks/: ChangePointDetectionTests.ipynb  changePointDetectionTests.ipynb  faceCurvatureAnalysis.ipynb  frontProjection.ipynb  sliceAnalysis.ipynb  testCountourAlgorithms.ipynb  waveAlgorithmsResearch.ipynb
notebooks/grabcut_and_morh/: grabcut-morphological-transformations-research.ipynb
openfoam/run-2/0/: omega
openfoam/run-2/constant/polyMesh/: boundary  cellLevel  cellZones  level0Edge  pointLevel
openfoam/run-2/constant/triSurface/: cylinder.eMesh
openfoam/run-2/system/: controlDict
openfoam/run/constant/polyMesh/: faceZones  pointZones
openfoam/run/constant/triSurface/: c.mlp  cylinder.eMesh
openfoam/run/system/: controlDict  snappyHexMeshDict
scripts/: niiGzToSliceImages.py
septum_analysis/: CMakeLists.txt  septum_analysis.py
septum_analysis/Resources/UI/: septum_analysis.ui
septum_analysis/Testing/Python/: ftp_test.py  inplaceFtpConvert.ipynb
septum_analysis/scripts/: face_curvature.py
septum_analysis/septum_analysisLib/: CalculatorVolume.py  CalculatorVolumeWidget.py  FaceCurvature.py  PipelineApplierLogic.py  SelectingClosedSurfaceEditorEffect.py  SinusesCategoryWidget.py  SinusesManipulator.py  SmartLocalThresholdEditorEffect.py  __init__.py  utils.py
t_SegmentNasalSeptum/: CMakeLists.txt  t_SegmentNasalSeptum.py
t_SegmentNasalSeptum/Resources/UI/: t_SegmentNasalSeptum.ui
